--- a/index.html
+++ b/index.html
@@ -14,13 +14,25 @@
  <body>
   <div id="preamble">
    <h2>
-    lucas
+    lucas kohorst
    </h2>
 
   </div>
 
   <div>
-   <p>personal website</p>
+   <h3>about</h3>
+   <p>
+    Initially studied computer science at <a href="https://rit.edu/">RIT</a>, until being introduced to crypto/blockchain and started to build a subscription marketplace for netflix subscriptions. Liking the space so much I created an individualized blockchain based major (courses that formed this major can be found <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">here</a>). 
+   </p>
+   <p>
+    Junior year I met and started working at a new subsidary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at <a href="https://foundrydigital.com">Foundry</a> we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
+   </p>
+   <p>
+    Folowing the launch of the staking business I have worked more on r&d and investing, exploring blockspace derivatives, custody frameworks, and improvement to operate high performance and uptime valdiators
+   </p>
+   <p>
+    I ocassionaly <a href="https://lucaskohorst.medium.com/">write</a>, open source as much <a href="https://github.com/Lucas-Kohorst/">code</a> as I can, and can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or via <a href="https://t.me/lucaskohorst">telegram</a>
+   </p>
   </div>
  </body>
 </html>
