--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     Initially studied computer science at <a href="https://rit.edu/">RIT</a>, until being introduced to crypto/blockchain and started to build a subscription marketplace for netflix subscriptions. Liking the space so much I created an individualized blockchain based major (courses that formed this major can be found <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">here</a>). 
    </p>
    <p>
-    2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at <a href="https://foundrydigital.com">Foundry</a> we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
+    2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
     Following the launch of the staking business I have worked more on r&d and investing, exploring blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
@@ -35,4 +35,7 @@
    </p>
   </div>
  </body>
+ <footer>
+    This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be propagated through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <code>ipfs pin add ipns/kohorst.fyi/</code>
+ </footer>
 </html>
