--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
   </div>
 
   <div>
-   <h3>about</h3>
    <p>
-    Initially studied computer science at <a href="https://rit.edu/">RIT</a>, until being introduced to crypto/blockchain and started to build a subscription marketplace for netflix subscriptions. Liking the space so much I created an individualized blockchain based major (courses that formed this major can be found <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">here</a>). 
+    Studied computer science at <a href="https://rit.edu/">RIT</a>, until being introduced to crypto/blockchain and started to build a subscription marketplace for netflix subscriptions. Liking the space so much I created and graduated with an individualized blockchain based major (courses that formed this major can be found <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">here</a>). 
    </p>
    <p>
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-    Following the launch of the staking business I have worked more on r&d and investing, exploring blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
+    Following the launch of the staking business I have worked more on r&d and venture investing, exploring blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
    </p>
    <p>
     I occasionally <a href="https://lucaskohorst.medium.com/">write</a>, open source as much <a href="https://github.com/Lucas-Kohorst/">code</a> as I can, and can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or via <a href="https://t.me/lucaskohorst">telegram</a>
@@ -36,6 +35,6 @@
   </div>
  </body>
  <footer>
-    This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be propagated through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <code>ipfs pin add ipns/kohorst.fyi/</code>
+    This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.fyi/</code>
  </footer>
 </html>
