--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-    Following the launch of the staking business I have worked more on r&d and venture investing, exploring blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
+    Following the launch of the staking business I have worked more on r&d and venture investing, exploring and structuring staking/blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
    </p>
    <p>
     I occasionally <a href="https://lucaskohorst.medium.com/">write</a>, open source as much <a href="https://github.com/Lucas-Kohorst/">code</a> as I can, and can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or via <a href="https://t.me/lucaskohorst">telegram</a>
