--- a/reading/11_2022.html
+++ b/reading/11_2022.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Reading" />
 
-  <title>Reading</title>
+  <title>Nov 2022</title>
 
  </head>
 
