--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     Following the launch of the staking business I have worked more on r&d and venture investing, exploring and structuring staking/blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
    </p>
    <p>
-    I occasionally <a href="https://lucaskohorst.medium.com/">write</a>, open source as much <a href="https://github.com/Lucas-Kohorst/">code</a> as I can, and can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or via <a href="https://t.me/lucaskohorst">telegram</a>. You can also find what I am reading at <a href="/reading">/reading</a>
+    I occasionally <a href="https://kohorst.fyi/writing">write</a>, open source as much <a href="https://github.com/Lucas-Kohorst/">code</a> as I can, and can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or <a href="https://t.me/lucaskohorst">telegram</a>. You can also find what I am reading at <a href="/reading">/reading</a>
    </p>
   </div>
  </body>
@@ -38,3 +38,4 @@
     This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.fyi/</code>
  </footer>
 </html>
+wrap
