--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-    Following the launch of the staking business I have worked more on r&d and venture investing, exploring and structuring staking/blockspace derivatives, custody frameworks, and improving the operation of high performance and uptime validators
+      Right now I am helping to build digital gardens with <a href="https://markbase.xyz"><code>Markbase</code></a> you can find my garden at <a href="https://kohorst-garden.markbase.xyz">garden.kohorst.fyi</a>
    </p>
    <p>
-    I occasionally <a href="https://kohorst.fyi/writing">write</a>, open source as much <a href="https://github.com/Lucas-Kohorst/">code</a> as I can, can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or <a href="https://t.me/lucaskohorst">telegram</a>. You can also find what I am reading <a href="/reading">here</a>
+      I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or <a href="https://t.me/lucaskohorst">telegram</a>.
    </p>
-   <p>I am also helping to build digital gardens with <a href="https://markbase.xyz"><code>Markbase</code></a>
   </div>
  </body>
  <footer>
