--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-      Right now I am helping to build digital gardens with <a href="https://markbase.xyz"><code>Markbase</code></a> check out my <a href="https://garden.kohorst.fyi">garden.kohorst.fyi</a>
+      Right now I am helping to build digital gardens with <a href="https://markbase.xyz"><code>Markbase</code></a> check out my <a href="https://lucas.markbase.xyz">lucas.markbase.xyz</a>
    </p>
    <p>
       I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or <a href="https://t.me/lucaskohorst">telegram</a>.
