--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       Right now I am helping to 
       <ul>
          <li>Build digital gardens with <a href="https://markbase.xyz"><code>Markbase</code></a> check out my garden at <a href="https://lucas.markbase.xyz">lucas.markbase.xyz</a></li>
-         <li>Creating a personified chat bot at <a href="https://inquire.run"><code>Inquire</code></a></li>
+         <li>Create a personified chat bot at <a href="https://inquire.run"><code>Inquire</code></a></li>
       </ul>
    </p>
    <p>
