--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
  </body>
  <footer>
-    This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.fyi/</code><br />
-    <a href="https://www.kohorst.fyi/writing/">/writing</a> <a href="https://www.kohorst.fyi/reading/">/reading</a>
+    This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
+    <a href="https://www.kohorst.esq/writing/">/writing</a> <a href="https://www.kohorst.esq/reading/">/reading</a>
  </footer>
 </html>
