--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ul>
    </p>
    <p>
-      I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a> or <a href="https://t.me/lucaskohorst">telegram</a>.
+      I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a>, <a href="https://t.me/lucaskohorst">telegram</a> or at <a href="mailto:lucas@kohorst.esq">lucas@kohorst.esq</a>
    </p>
   </div>
  </body>
