--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
  </body>
  <footer>
     This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
-    <a href="https://www.kohorst.esq/writing/">/writing</a> <a href="https://www.kohorst.esq/reading/">/reading</a>
+    <a href="https://www.kohorst.esq/writing/index.html">/writing</a> <a href="https://www.kohorst.esq/reading/index.html">/reading</a>
  </footer>
 </html>
