--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
  </body>
  <footer>
     This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
-    <a href="https://www.kohorst.esq/writing/index.html">/writing</a> <a href="https://www.kohorst.esq/reading/index.html">/reading</a>
+    <b>Writing</b>
+      <a href="/writing/2021-08-17_Selling-Calls-and-Puts-on-Uniswap-V3.html">Selling Calls and Puts on Uniswap V3</a><br />
+      <a href="/writing/2020-01-31_Introducing-Give-Together.html">Introducing Give Together</a><br />
+      <a href="/writing/2020-01-13_Decentralizing-your-Website.html">Decentralizing your Website</a><br />
+      <a href="/writing/2019-12-13_Constituency-vs--Dependency-Parsing.html">Constituency vs Dependency Parsing</a><br />
+   <b>Reading</b>
+      <a href="/reading/spring_2023.html">Spring 2023</a><br />
+      <a href="/reading/01_2023.html">Jan. 2023</a><br />
+      <a href="/reading/12_2022.html">Dec. 2022</a><br />
+      <a href="/reading/11_2022.html">Nov. 2022</a>
  </footer>
 </html>
