--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  </body>
  <footer>
     This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
-    <b>Writing</b><br />
+    <br /><b>Writing</b><br />
       <a href="/writing/2021-08-17_Selling-Calls-and-Puts-on-Uniswap-V3.html">Selling Calls and Puts on Uniswap V3</a><br />
       <a href="/writing/2020-01-31_Introducing-Give-Together.html">Introducing Give Together</a><br />
       <a href="/writing/2020-01-13_Decentralizing-your-Website.html">Decentralizing your Website</a><br />
