--- a/index.html
+++ b/index.html
@@ -27,28 +27,14 @@
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-      Right now I am helping to 
-      <ul>
-         <li>Build digital gardens with <a href="https://markbase.xyz"><code>Markbase</code></a> check out my garden at <a href="https://lucas.markbase.xyz">lucas.markbase.xyz</a></li>
-         <li>Create a personified chat bot at <a href="https://inquire.run"><code>Inquire</code></a></li>
-      </ul>
-   </p>
+      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, creating, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> at nights and on the weekends
    <p>
       I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a>, <a href="https://t.me/lucaskohorst">telegram</a> or at <a href="mailto:lucas@kohorst.esq">lucas@kohorst.esq</a>
    </p>
+   <p><a href="/reading">Here</a> is some selected reading and here is some <a href="writing">writing</a></p>
   </div>
  </body>
  <footer>
     This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
-    <br /><b>Writing</b><br />
-      <a href="/writing/2021-08-17_Selling-Calls-and-Puts-on-Uniswap-V3.html">Selling Calls and Puts on Uniswap V3</a><br />
-      <a href="/writing/2020-01-31_Introducing-Give-Together.html">Introducing Give Together</a><br />
-      <a href="/writing/2020-01-13_Decentralizing-your-Website.html">Decentralizing your Website</a><br />
-      <a href="/writing/2019-12-13_Constituency-vs--Dependency-Parsing.html">Constituency vs Dependency Parsing</a><br />
-   <b>Reading</b><br />
-      <a href="/reading/spring_2023.html">Spring 2023</a><br />
-      <a href="/reading/01_2023.html">Jan. 2023</a><br />
-      <a href="/reading/12_2022.html">Dec. 2022</a><br />
-      <a href="/reading/11_2022.html">Nov. 2022</a>
  </footer>
 </html>
