--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <p>
       Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, creating, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> at nights and on the weekends
    <p>
-      I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a>, <a href="https://t.me/lucaskohorst">telegram</a> or at <a href="mailto:lucas@kohorst.esq">lucas@kohorst.esq</a>
+      I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a>, <a href="https://t.me/lucaskohorst">telegram</a> or at <a href="mailto:lucaskohorst@skiff.com">lucaskohorst@skiff.com</a>
    </p>
    <p><a href="/reading">Here</a> is some selected reading and here is some <a href="writing">writing</a></p>
   </div>
