--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, creating, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> at nights and on the weekends
+      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, creating, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> on nights and weekends
    <p>
-      I can be reached on <a href="https://twitter.com/KohorstLucas">twitter</a>, <a href="https://t.me/lucaskohorst">telegram</a> or at <a href="mailto:lucaskohorst@skiff.com">lucaskohorst@skiff.com</a>
+      <ul>
+         <li><a href="https://t.me/lucaskohorst">Telegram</a></li>
+         <li><a href="https://twitter.com/KohorstLucas">X / Twitter</a></li>
+         <li><a href="https://github.com/Lucas-Kohorst">Github</a></li>
+         <li><a href="https://www.corner.inc/lucas">Corner</a></li>
+         <li>Selected <a href="/reading">reading</a> and <a href="writing">writing</a></li>
+      </ul>
    </p>
-   <p><a href="/reading">Here</a> is some selected reading and here is some <a href="writing">writing</a></p>
   </div>
  </body>
  <footer>
-    This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
+    <b>></b> This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
  </footer>
 </html>
