--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 
   <div>
    <p>
-    Studied computer science at <a href="https://rit.edu/">RIT</a>, until being introduced to crypto/blockchain and started to build a subscription marketplace for netflix subscriptions. Liking the space so much I created and graduated with an individualized blockchain based major (courses that formed this major can be found <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">here</a>). 
+    Computer Science at <a href="https://rit.edu/">RIT</a> until switching and graduating with an <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">individualized blockchain based major</a>. 
    </p>
    <p>
-    2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. Since being at Foundry we have grown to the <a href="https://explorer.btc.com/btc/insights-pools">largest bitcoin mining pool in the world</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
+    2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. At Foundry we have grown to the <a href="https://mempool.space/graphs/mining/pools">largest bitcoin mining pool</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, creating, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> on nights and weekends
+      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> on nights and weekends.
    <p>
       <ul>
          <li><a href="https://t.me/lucaskohorst">Telegram</a></li>
          <li><a href="https://twitter.com/KohorstLucas">X / Twitter</a></li>
          <li><a href="https://github.com/Lucas-Kohorst">Github</a></li>
          <li><a href="https://www.corner.inc/lucas">Corner</a></li>
-         <li>Selected <a href="/reading">reading</a> and <a href="writing">writing</a></li>
+         <li>Selected <a href="/reading">reading</a> and <a href="https://adjacentresearch.substack.com">writing</a></li>
       </ul>
    </p>
   </div>
