--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. At Foundry we have grown to the <a href="https://mempool.space/graphs/mining/pools">largest bitcoin mining pool</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
    </p>
    <p>
-      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> on nights and weekends.
+      Right now I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, exploring, and investing at <a href="https://www.adjacentresearch.xyz">Adjacent Research</a> on nights and weekends.
    <p>
       <ul>
          <li><a href="https://t.me/lucaskohorst">Telegram</a></li>
