--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Lucas Kohorst" />
+  <meta property="og:image" content="https://pbs.twimg.com/profile_images/1418173132645470208/krdvrBwo_400x400.jpg"/>
+  <link rel="icon" type="image/jpeg" href="https://pbs.twimg.com/profile_images/1418173132645470208/krdvrBwo_400x400.jpg">
 
   <title>Lucas Kohorst</title>
 
@@ -20,25 +22,19 @@
   </div>
 
   <div>
-   <p>
-    Computer Science at <a href="https://rit.edu/">RIT</a> until switching and graduating with an <a href="https://github.com/Lucas-Kohorst/blockchain-technology-rit">individualized blockchain based major</a>. 
-   </p>
-   <p>
-    2020 I started working at a new subsidiary of <a href="https://dcg.co">Digital Currency Group</a>, <a href="https://foundrydigital.com">Foundry</a>. At Foundry we have grown to the <a href="https://mempool.space/graphs/mining/pools">largest bitcoin mining pool</a>, financed a <a href="https://foundrydigital.com/news">large amount of mining operations</a>, and launched an <a href="https://blockworks.co/foundry-digital-launches-staking-business-as-institutions-become-comfortable/">institutional staking business</a>.
-   </p>
-   <p>
-      I am continuing to build at <a href="https://foundrydigital.com">Foundry</a> during the days and am writing, exploring, and investing at <a href="https://adjacentresearch.xyz">Adjacent Research</a> on nights and weekends.
-   <p>
+      <ul>
+         <li><a href="https://foundrydigital.com">Foundry</a></li>
+         <li><a href="https://dcg.co">DCG</a></li>
+         <li><a href="https://adjacentresearch.xyz">Adjacent</a></li>
+      </ul>
       <ul>
          <li><a href="https://t.me/lucaskohorst">Telegram</a></li>
          <li><a href="https://twitter.com/KohorstLucas">X / Twitter</a></li>
          <li><a href="https://github.com/Lucas-Kohorst">Github</a></li>
+         <li><code><a href="mailto:lucas@kohor.st">lucas@kohor.st</a></code></li>
          <li>Curation <a href="https://sublime.app/lucas">Sublime</a> (Digital) and <a href="https://www.corner.inc/lucas">Corner</a> (Physical)</li>
       </ul>
    </p>
   </div>
  </body>
- <footer>
-   > This website is hosted on <a href="https://ipfs.io/">ipfs</a> and can be found/pinned through <a href="https://docs.ipfs.tech/concepts/ipns/">ipns</a> with <br /><code>ipfs pin add ipns/kohorst.esq/</code><br />
- </footer>
 </html>
