--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
   </div>
 
   <div>
+     <h2># Work</h2>
       <ul>
          <li><a href="https://foundrydigital.com">Foundry</a></li>
          <li><a href="https://dcg.co">DCG</a></li>
          <li><a href="https://adjacentresearch.xyz">Adjacent</a></li>
       </ul>
+
+      <h2># Links</h2>
       <ul>
          <li><a href="https://t.me/lucaskohorst">Telegram</a></li>
          <li><a href="https://twitter.com/KohorstLucas">X / Twitter</a></li>
