--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
       </ul>
    </p>
   </div>
+
+  <iframe src="https://press.adjacentresearch.xyz/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
  </body>
 </html>
