--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
    </p>
   </div>
 
-  <iframe src="https://press.adjacentresearch.xyz/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+  <iframe 
+  src="https://press.adjacentresearch.xyz/embed" 
+  width="480" 
+  height="320" 
+  style="border:1px solid #EEE; background:transparent;" 
+  frameborder="0" 
+  scrolling="no"
+></iframe>
 
  </body>
 </html>
