--- a/index.html
+++ b/index.html
@@ -40,14 +40,9 @@
    </p>
   </div>
 
-  <iframe 
-  src="https://press.adjacentresearch.xyz/embed" 
-  width="480" 
-  height="320" 
-  style="border:1px solid #EEE; background:transparent;" 
-  frameborder="0" 
-  scrolling="no"
-></iframe>
+  <iframe src="https://press.adjacentresearch.xyz/embed" width="480" he
+ight="320" style="background:white;"
+frameborder="0" scrolling="no"></if rame>
 
  </body>
 </html>
