--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
    </p>
   </div>
 
-  <iframe src="https://press.adjacentresearch.xyz/embed" width="480" he
+  <!-- <iframe src="https://press.adjacentresearch.xyz/embed" width="480" he
 ight="320" style="background:white;"
-frameborder="0" scrolling="no"></if rame>
+frameborder="0" scrolling="no"></if rame> -->
 
  </body>
 </html>
