--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
 <a href="https://foundrydigital.com" class="small">foundry</a>
 <a href="https://dcg.co" class="small">dcg</a>
 <a href="https://adjacentresearch.xyz" class="small">adjacent</a>
+<br />
+<a href="https://t.me/lucaskohorst" class="small">telegram</a>
+<a href="https://twitter.com/KohorstLucas" class="small">x</a>
+<a href="https://github.com/Lucas-Kohorst" class="small">github</a>
+<code><a href="mailto:lucas@kohor.st" class="small">lucas@kohor.st</a></code>
+<a href="https://sublime.app/lucas" class="small">sublime</a>
+<a href="https://corner.inc/lucas" class="small">corner</a>
 </div>
 <div id="time-display" style="text-align: right;">
 <span id="sf-time"></span><br>
@@ -135,14 +142,6 @@
 <span id="london-time" style="display: flex; justify-content: space-between;"></span>
 </div>
 
-<div id="time-display-left">
-<a href="https://t.me/lucaskohorst">telegram</a>
-<a href="https://twitter.com/KohorstLucas">x</a>
-<a href="https://github.com/Lucas-Kohorst">github</a>
-<code><a href="mailto:lucas@kohor.st">lucas@kohor.st</a></code>
-<a href="https://sublime.app/lucas">sublime</a>
-<a href="https://corner.inc/lucas">corner</a>
-</div>
 </div>
 
 </div>
