--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <a href="https://dcg.co" class="small">dcg</a>
 <a href="https://adjacentresearch.xyz" class="small">adjacent</a>
 <br />
+<a href="/blog" class="small">blog</a>
 <a href="https://t.me/lucaskohorst" class="small">telegram</a>
 <a href="https://twitter.com/KohorstLucas" class="small">x</a>
 <a href="https://github.com/Lucas-Kohorst" class="small">github</a>
