--- a/blog.html
+++ b/blog.html
@@ -124,9 +124,11 @@
 <body>
 <div class="content-container">
 <div class="tree">
-  <a href="https://kohor.st/blog/generations.md" class="small" style="font-style: italic;">02/26 generations</a>
+    <ul>
+      <li><a href="https://kohor.st/blog/generations.md" class="small" style="font-style: italic;">02/26 generations</a></li>
+    </ul>
 </div>
 
 </div>
 </body>
-</html>%  
+</html>
