--- a/blog.html
+++ b/blog.html
@@ -125,7 +125,7 @@
 <div class="content-container">
 <div class="tree">
     <ul>
-      <li><a href="https://kohor.st/blog/generations.md" class="small" style="font-style: italic;">02/26 generations</a></li>
+      <li><a href="https://kohor.st/blog/generations.html" class="small" style="font-style: italic;">02/26 generations</a></li>
     </ul>
 </div>
 
