--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lucas</title>
+    <title>Blog</title>
     <meta property="og:image" content="https://pbs.twimg.com/profile_images/1668357289747554304/7NSJ60Fd_400x400.jpg"/>
     <link rel="icon" type="image/jpeg" href="https://pbs.twimg.com/profile_images/1816112137627897856/Dc4NYRdj_400x400.jpg">
     <style>
@@ -12,17 +12,6 @@
         }
         body, .header, .tree {
             font-family: monospace;
-        }
-        .content-container {
-            max-width: 800px;
-            margin-left: 1%;
-            padding: 20px;
-            word-wrap: break-word;
-        }
-        .header, .tree {
-            white-space: pre;
-            margin-top: 10px;
-            margin-left: 1%;
         }
         .header {
             font-size: 14px;
@@ -41,89 +30,12 @@
         .sublink_small:visited {
             color: gray;
         }
-        #adjacent-press {
-            margin-top: 20px;
-        }
-        #time-display {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            background-color: #f0f0f0;
-            padding: 5px;
-            border: 1px solid #ccc;
-        }
-        #time-display-left {
-            position: fixed;
-            bottom: 10px;
-            left: 10px;
-            background-color: #f0f0f0;
-            padding: 5px;
-            border: 1px solid #ccc;
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-        }
-        #time-display-left a {
-            margin: 0 5px;
-        }
-        @media (max-width: 768px) {
-            #time-display-left {
-                display: flex;
-                flex-direction: column;
-                text-align: left;
-            }
-            #time-display-left a,
-            #time-display-left code {
-                margin: 3px 0;
-            }
-        }
-        #rss-feed-press {
-            padding-left: 20px;
-            font-size: 14px;
-        }
-
-        #rss-feed-press a {
-            color: black;
-            text-decoration: underline dotted;
-        }
-
-        #rss-feed-press a:visited {
-            color: blue;
-        }
-
-        #rss-feed-news {
-            padding-left: 20px;
-            font-size: 14px;
-        }
-
-        #rss-feed-news a {
-            color: black;
-            text-decoration: underline dotted;
-        }
-
-        #rss-feed-news a:visited {
-            color: blue;
-        }
-
-        .rss-item {
-            display: flex;
-            align-items: flex-start;
-            padding: 0.25em;
-        }
-
-        .rss-item::before {
-            content: "├──";
-            margin-right: 5px;
-        }
-
-        .rss-item:last-child::before {
-            content: "└──";
-        }
     </style>
 </head>
 <body>
 <div class="content-container">
 <div class="tree">
+    <a href="/" class="small">home</a>
     <ul>
       <li><a href="https://kohor.st/blog/generations.html" class="small" style="font-style: italic;">02/26 generations</a></li>
     </ul>
